--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<script src="https://use.fontawesome.com/a5075c1dbc.js"></script>
 
 
-		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
 
 		</head>
 	<body>
